@startuml

skinparam defaultFontName monospaced

'=======================================================================================================================
package app_event {
    class AppEvent
}

'=======================================================================================================================
class EventQueue {
    + push(AppEvent)
--
    - _pop() -> AppEvent
--
    - _queue
}

'------------------------------------------------------------------------------------------------------------------------
EventQueue *-- app_event.AppEvent

'=======================================================================================================================
class EventMgr 

'------------------------------------------------------------------------------------------------------------------------
EventMgr *-- EventQueue
EventMgr --> EventQueue : friend for _pop()

'=======================================================================================================================
@enduml
